--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "aula-2",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "node techzone-api/server.js",
+    "dev": "nodemon techzone-api/server.js",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -12,6 +14,8 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.1.6",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
@@ -27,8 +31,21 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "nodemon": "^3.1.10",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
-  }
+  },
+  "description": "https://jsonplaceholder.typicode.com/posts\r This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jay-Ubisse/b4f-techzone-project.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jay-Ubisse/b4f-techzone-project/issues"
+  },
+  "homepage": "https://github.com/Jay-Ubisse/b4f-techzone-project#readme"
 }
